Remove floating-control.js and replace it with spacer divs in every page that has floating controls as well as fix the users header messing up on small widths

--- a/symfony_project/web/styles/styles.css
+++ b/symfony_project/web/styles/styles.css
@@ -110,6 +110,10 @@ body.hidden_hamburger {
     text-decoration: underline;
 }
 
+#FloatingControlsSpacer {
+    height: 100px;
+}
+
 .nav-path {
     width: 90%;
     margin: auto;
